# katsdpmodels

./: .flake8  .gitignore  Jenkinsfile  README.rst  doc-requirements.txt  mypy.ini  pytest.ini  requirements.txt  setup.cfg  test-requirements.txt
doc/: changelog.rst  conf.py  index.rst  katsdpmodels.fetch.rst  katsdpmodels.rst  modules.rst
doc/user/: api.rst  concepts.rst  example_aliases1.tex  example_aliases2.tex  example_aliases3.tex  formats.rst  index.rst  structure.rst  telstate.rst
katsdpmodels/: models.py  rfi_mask.py
src/katsdpmodels/: band_mask.py  diode_to_sky.py  fetch.py  fetch_base.py  local_sky.py  local_sky_model.py  models.py  primary_beam.py  rfi_mask.py  sefd.py
src/katsdpmodels/fetch/: __init__.py  aiohttp.py  requests.py
test/: conftest.py  test_band_mask.py  test_diode_to_sky.py  test_fetch.py  test_fetch_aiohttp.py  test_fetch_requests.py  test_local_sky.py  test_models.py  test_primary_beam.py  test_rfi_mask.py  test_sefd.py  test_utils.py
test/data/: README.rst  bad_created.h5  bad_model_type.h5  bad_model_type.hdf5  bad_model_version.h5  band_mask_bad_format.h5  band_mask_ranges.h5  band_mask_ranges_2d.h5  direct.alias  indirect.alias  invalid_created.h5  loop.alias  no_model_type.h5  no_model_type.hdf5  no_model_version.h5  rfi_mask_bad_format.h5  rfi_mask_missing_dataset.h5  rfi_mask_missing_dataset.hdf5  rfi_mask_ranges.h5  rfi_mask_ranges_2d.h5  rfi_mask_ranges_is_group.h5  rfi_mask_ranges_is_group.hdf5  rfi_mask_ranges_metadata.h5  wrong_extension.blah
