[metadata]
name = katsdpmodels
description = Interfaces to access models used in MeerKAT SDP
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Modified BSD
author = MeerKAT SDP Team
author_email = sdp-dev+katsdpmodels@ska.ac.za
url = https://github.com/ska-sa/katsdpmodels
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
    packages = find:
    install_requires =
        numpy
        astropy
        h5py >= 2.9
        requests
        requests-file
        typing_extensions
    python_requires = >=3.6

[options.extras_require]

test = pytest
